// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate header works properly render header is working 1`] = `
.c0 {
  background-color: #60a4e4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: none;
  z-index: 1100;
  width: 100%;
  min-height: 64px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<header
  className="c0"
/>
`;

exports[`validate menu button renders render menu is working 1`] = `
.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25px;
  height: 25px;
}

.c0 {
  background-color: transparent;
  color: transparent;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px 25px 0px 15px;
}

@media (max-width:640px) {
  .c0 {
    margin: 0px 0px 0px 10px;
  }
}

<button
  className="c0"
>
  <svg
    className="c1"
    viewBox="0 0 24 24"
  >
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
</button>
`;

exports[`validate session button works properly render session button is working 1`] = `
.c1 {
  fill: white;
}

.c0 {
  border: none;
  border-radius: 50%;
  height: 40px;
  min-width: 40px;
  background-color: #bdbdbd;
  color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0px 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

@media (max-width:640px) {
  .c0 {
    display: none;
  }
}

<button
  className="c0"
>
  <svg
    className="c1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
    />
  </svg>
</button>
`;

exports[`validate theme selector works properly render theme selector button is working 1`] = `
.c0 {
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  vertical-align: center;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
}

.c2 {
  color: Black;
  font-weight: bold;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
}

.c1 {
  margin: 0px 15px;
}

@media (max-width:640px) {
  .c0 {
    display: none;
  }
}

<div
  className="c0"
>
  <input
    className="c1"
    type="checkbox"
  />
  <label
    className="c2"
  >
    Dark Mode
  </label>
</div>
`;
